--- a/Game/index.html
+++ b/Game/index.html
@@ -6,8 +6,11 @@
     <title>GunFight</title>
     <script type="text/javascript" src="./lib/enchant/enchant.js"></script>
     <script type="text/javascript" src="./js/Vector2/Vector2.js"></script>
+    <script type="text/javascript" src="./js/TimeUI/TimeUI.js"></script>
+    <script type="text/javascript" src="./js/Bullet/BulletManager.js"></script>
     <script type="text/javascript" src="./js/Bullet/Bullet.js"></script>
     <script type="text/javascript" src="./js/Player/Player.js"></script>
+    <script type="text/javascript" src="./js/Scene/GamePlayScene.js"></script>
     <script type="text/javascript" src="./js/main.js"></script>
     <script src="/socket.io/socket.io.js"></script>
   </head>
