通信系イベントの追加

--- a/Game/index.html
+++ b/Game/index.html
@@ -17,9 +17,12 @@
   <body>
     <script>
       let socket = io();
-
-      socket.emit('join', {name:"a"});
-
+      let room;
+      let name="a";
+      socket.emit('join', {name:name});
   </script>
+    <script type="text/javascript" src="./js/Event/RoomEvent.js"></script>
+    <script type="text/javascript" src="./js/Event/PageCloseEvent.js"></script>
+
   </body>
 </html>
