プレイヤー番号の切り分け

--- a/Game/index.html
+++ b/Game/index.html
@@ -18,6 +18,7 @@
     <script>
       let socket = io();
       let room;
+      let playerNum;
       let name="a";
       socket.emit('join', {name:name});
   </script>
