--- a/Game/index.html
+++ b/Game/index.html
@@ -4,15 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>GunFight</title>
+    <script src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="./lib/enchant/enchant.js"></script>
     <script type="text/javascript" src="./js/Vector2/Vector2.js"></script>
+    <script type="text/javascript" src="./js/Enemy/Enemy.js"></script>
     <script type="text/javascript" src="./js/TimeUI/TimeUI.js"></script>
     <script type="text/javascript" src="./js/Bullet/BulletManager.js"></script>
     <script type="text/javascript" src="./js/Bullet/Bullet.js"></script>
     <script type="text/javascript" src="./js/Player/Player.js"></script>
     <script type="text/javascript" src="./js/Scene/GamePlayScene.js"></script>
     <script type="text/javascript" src="./js/main.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
+
   </head>
   <body>
     <script>
