--- a/Game/index.html
+++ b/Game/index.html
@@ -11,6 +11,9 @@
     <script type="text/javascript" src="./js/Bullet/Bullet.js"></script>
     <script type="text/javascript" src="./js/Player/Player.js"></script>
     <script type="text/javascript" src="./js/Scene/GamePlayScene.js"></script>
+    <script type="text/javascript" src="./js/UI/MatchingWait.js"></script>
+    <script type="text/javascript" src="./js/UI/Button/ButtonUI.js"></script>
+    <script type="text/javascript" src="./js/Scene/MatchingScene.js"></script>
     <script type="text/javascript" src="./js/main.js"></script>
     <script src="/socket.io/socket.io.js"></script>
   </head>
@@ -20,7 +23,7 @@
       let room;
       let playerNum;
       let name="a";
-      socket.emit('join', {name:name});
+
   </script>
     <script type="text/javascript" src="./js/Event/RoomEvent.js"></script>
     <script type="text/javascript" src="./js/Event/PageCloseEvent.js"></script>
