命名シーンの作成 #86 #87

--- a/Game/index.html
+++ b/Game/index.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="./js/UI/MatchingWait.js"></script>
     <script type="text/javascript" src="./js/UI/Button/ButtonUI.js"></script>
     <script type="text/javascript" src="./js/Scene/MatchingScene.js"></script>
+    <script type="text/javascript" src="./js/Scene/NamingScene.js"></script>
     <script type="text/javascript" src="./js/main.js"></script>
     <script src="/socket.io/socket.io.js"></script>
   </head>
@@ -22,7 +23,7 @@
       let socket = io();
       let room;
       let playerNum;
-      let name="a";
+      let name="noname";
 
   </script>
     <script type="text/javascript" src="./js/Event/RoomEvent.js"></script>
