とりあえずタイトル

--- a/Game/index.html
+++ b/Game/index.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="./js/Scene/GamePlayScene.js"></script>
     <script type="text/javascript" src="./js/UI/MatchingWait.js"></script>
     <script type="text/javascript" src="./js/UI/Button/ButtonUI.js"></script>
+    <script type="text/javascript" src="./js/Scene/TitleScene.js"></script>
     <script type="text/javascript" src="./js/Scene/MatchingScene.js"></script>
     <script type="text/javascript" src="./js/Scene/NamingScene.js"></script>
     <script type="text/javascript" src="./js/main.js"></script>
