リザルトの骨組み

--- a/Game/index.html
+++ b/Game/index.html
@@ -8,10 +8,12 @@
     <script type="text/javascript" src="./lib/enchant/enchant.js"></script>
     <script type="text/javascript" src="./js/Vector2/Vector2.js"></script>
     <script type="text/javascript" src="./js/Enemy/Enemy.js"></script>
+    <script type="text/javascript" src="./js/GameRule/GameRule.js"></script>
     <script type="text/javascript" src="./js/TimeUI/TimeUI.js"></script>
     <script type="text/javascript" src="./js/Bullet/BulletManager.js"></script>
     <script type="text/javascript" src="./js/Bullet/Bullet.js"></script>
     <script type="text/javascript" src="./js/Player/Player.js"></script>
+    <script type="text/javascript" src="./js/Scene/Result.js"></script>
     <script type="text/javascript" src="./js/Scene/GamePlayScene.js"></script>
     <script type="text/javascript" src="./js/main.js"></script>
 
