建物の当たり判定追加 #76 #79

--- a/Game/index.html
+++ b/Game/index.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="./js/Bullet/BulletManager.js"></script>
     <script type="text/javascript" src="./js/Bullet/Bullet.js"></script>
     <script type="text/javascript" src="./js/Player/Player.js"></script>
+    <script type="text/javascript" src="./js/Block/BlockManager.js"></script>
     <script type="text/javascript" src="./js/Block/Block.js"></script>
     <script type="text/javascript" src="./js/Scene/GamePlayScene.js"></script>
     <script type="text/javascript" src="./js/main.js"></script>
