--- a/Game/index.html
+++ b/Game/index.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="./js/Bullet/BulletManager.js"></script>
     <script type="text/javascript" src="./js/Bullet/Bullet.js"></script>
     <script type="text/javascript" src="./js/Player/Player.js"></script>
+    <script type="text/javascript" src="./js/UI/Heart/Heart.js"></script>
     <script type="text/javascript" src="./js/Scene/Result.js"></script>
     <script type="text/javascript" src="./js/Scene/GamePlayScene.js"></script>
     <script type="text/javascript" src="./js/UI/MatchingWait.js"></script>
