BGMの修正、開始タイムの調整 #85 #83 #51

--- a/Game/index.html
+++ b/Game/index.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="./js/Bullet/BulletManager.js"></script>
     <script type="text/javascript" src="./js/Bullet/Bullet.js"></script>
     <script type="text/javascript" src="./js/Player/Player.js"></script>
+    <script type="text/javascript" src="./js/Sound/BGMManager.js"></script>
     <script type="text/javascript" src="./js/Scene/Result.js"></script>
     <script type="text/javascript" src="./js/Scene/GamePlayScene.js"></script>
     <script type="text/javascript" src="./js/UI/MatchingWait.js"></script>
@@ -30,7 +31,7 @@
       let room;
       let playerNum;
       let name="noname";
-
+      let maptype=0;
   </script>
     <script type="text/javascript" src="./js/Event/RoomEvent.js"></script>
     <script type="text/javascript" src="./js/Event/PageCloseEvent.js"></script>
